tests/error/complex_invalid_re.gw
// [contains] in real component of complex value
 #(NULL, 0);
